# vim: set tw=75 ft=none :

2007/08/08      1.19p32
[Patch: Metamod-P v32 by Jussi Kivilinna]
 - Compiling with MSVC fixed by Nikolay "The Storm" Baklicharov.
 - [linux] Remake of dynamic linkent code. Parse dlsym function trampoline 
   instead of parsing ELF structures.
 - [linux] Dropped AMD64 build since Valve doesn't support their AMD64 build 
   anymore and I don't have access to AMD64 machine to port new dynamic 
   linkent code. Sorry!

2007/04/05      1.19p31
[Patch: Metamod-P v31 by Jussi Kivilinna]
 - Enabled 'regparam' for internal functions. Means that function arguments are
   passed through registers instead of stack, which increases performance.
 - Merged in changes from Metamod 1.19 that I didn't initially notice:
   - Fixed a bug where plugins could not catch NewDLL calls for GameDLLs that
     do not provide NewDLL information.

2007/04/04      1.19p30
[Patch: Metamod-P v30 by Jussi Kivilinna]
 - Fixed safevoid_vsnprintf() on win32.

2007/04/02      1.19p29
[Patch: Metamod-P v29 by Jussi Kivilinna]
 - crash fix that didn't work

2006/03/04      1.19p28
[Patch: Metamod-P v28 by Jussi Kivilinna]
 - Removed use of __VA_ARGS__ (should be easy to port to msvc now).
 - Reduced size of extra engineapi function slots from 128 to 16.
 - Clean up code, removed use of likely()/unlikely() macros in places where 
   they don't give extra performance.
 - Added MakeRequestID() API
 - Added api for using hook tables from plugins (thanks to BAILOPAN)
 - Re-enabled fix for engine_api varargs log calls with very long log string.

2005/08/24      1.18p26
[Patch: Metamod-P v26 by Jussi Kivilinna]
 - Fixed newapi functions not active on mods that don't use newapi.
 - [win32] New is_gamedll() code.
 - [linux] Fix for buggy DT_HASH in library walker function.
 - Following features were removed to improve stability. These changes were 
   not present in metamod.org version:
      - Removed fix for engine_api varargs log calls with very long log 
        string. 