@@ -95,7 +95,7 @@ char * DLLINTERNAL my_strlwr(char *s) {
 #endif
 
 
-#ifdef FIX_VARARG_ENGINE_API_WARPERS
+#ifndef DO_NOT_FIX_VARARG_ENGINE_API_WARPERS
 // Microsoft's msvcrt.dll:vsnprintf is buggy and so is vsnprintf on some glibc versions.
 // We use wrapper function to fix bugs.
 //  from: http://sourceforge.net/tracker/index.php?func=detail&aid=1083721&group_id=2435&atid=102435
