@@ -98,7 +98,7 @@
 #define C_DLLEXPORT		extern "C" DLLEXPORT
 
 // Special version that fixes vsnprintf bugs.
-#ifdef FIX_VARARG_ENGINE_API_WARPERS
+#ifndef DO_NOT_FIX_VARARG_ENGINE_API_WARPERS
 int DLLINTERNAL safe_vsnprintf(char* s,  size_t n,  const char *format, va_list ap);
 int DLLINTERNAL safe_snprintf(char* s, size_t n, const char* format, ...);
 #endif
